--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rust + HTMX + D3 Web App</title>
-    <script src="node_modules/htmx.org/dist/htmx.min.js"></script>
-    <script src="node_modules/d3/dist/d3.min.js"></script>
-    <script src="app.js" type="module"></script>
-    <link rel="stylesheet" href="styles.css">
+    <script src="/node_modules/htmx.org/dist/htmx.min.js"></script>
+    <script src="/node_modules/d3/dist/d3.min.js"></script>
+    <script src="/app.js" type="module"></script>
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <h1>My Dynamic Web App</h1>
