--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,21 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rust + HTMX + D3 Web App</title>
+    <title>Portfolio Management Dashboard</title>
     <script src="/node_modules/htmx.org/dist/htmx.min.js"></script>
     <script src="/node_modules/d3/dist/d3.min.js"></script>
     <script src="/app.js" type="module"></script>
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-    <h1>My Dynamic Web App</h1>
-    <div id="content">
-        <button hx-get="/api/data" hx-target="#result" hx-trigger="click">
-            Load Data
-        </button>
-        <div id="result"></div>
+    <h1>Portfolio Management Dashboard</h1>
+    <div class="dashboard">
+        <div class="chart-container">
+            <h2>Asset Allocation</h2>
+            <div id="pie-chart"></div>
+        </div>
+        <div class="chart-container">
+            <h2>Portfolio Performance</h2>
+            <div id="line-chart"></div>
+        </div>
+        <div class="chart-container">
+            <h2>Asset Returns</h2>
+            <div id="bar-chart"></div>
+        </div>
     </div>
-    <div id="chart"></div>
 </body>
 </html>
-
